# mantellum

./: .gitignore  README.md  setup.cfg
src/mantellum/: decorators.py  logging_utils.py  metrics.py
tests/: test_decorators.py  test_metrics.py
