[metadata]
name = mantellum
version = 1.0.3
author = Nico Coetzee
author_email = nicc777@gmail.com
description = Some common utils that might be useful to many Python projects
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nicc777/mantellum
project_urls =
    Bug Tracker = https://github.com/nicc777/mantellum/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Environment :: Plugins
    Topic :: System :: Software Distribution
    Topic :: Utilities
    Topic :: Software Development
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
# install_requires =
#     cerberus
#     PyYAML

# [options.entry_points]
# console_scripts =
#     animus = py_animus.py_animus:run_main

[options.packages.find]
where = src